--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
         .menu-main a{
             color:#222;
             text-decoration:none;
+            transition: color 0.25s ease, text-shadow 0.25s ease;
         }
-
+        
         .menu-main a:hover{
-            text-decoration:underline;
+            color:#0ea574;
+            text-decoration:none;
+            text-shadow: 0 0 8px rgba(14, 165, 116, 0.6);
+        }
+        
+        .menu-main a:focus,
+        .menu-main a:active{
+            color:#0ea574;
+            text-shadow: 0 0 6px rgba(14, 165, 116, 0.4);
         }
 
         .burger{
