--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
             font-size:2.5rem;
             color:#0c6b3f;
             font-weight:800;
-            font-family:'Playfair Display', serif;
+        
+            font-family:'Montserrat', sans-serif;
+            letter-spacing:1px;
         }
 
         /* -------- WELCOME / BIENVENUE -------- */
