--- a/basket.html
+++ b/basket.html
@@ -1,1 +1,280 @@
+<!DOCTYPE html>
+<html lang="fr-FR">
+<head>
+    <meta charset="utf-8">
+    <title>Basket</title>
 
+    <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
+    <meta name="description" content="Vous pratiquez le basket à Paris ? Découvrez des astuces pour améliorer vos tirs et marquer plus facilement.">
+    <meta name="keywords" content="basket, ballon de basket, panier, terrain, tirer">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap (wie überall) -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
+
+    <style>
+        body{
+            margin:0;
+            font-family: Arial, Helvetica, sans-serif;
+            background:#f3f5f7;
+        }
+
+        /* -------- NAV -------- */
+        header{
+            background:#ffffff;
+            box-shadow:0 2px 4px rgba(0,0,0,0.05);
+            position:sticky;
+            top:0;
+            z-index:1000;
+        }
+
+        .menu{
+            max-width:1200px;
+            margin:0 auto;
+        }
+
+        .menu-main{
+            list-style:none;
+            padding:15px 0;
+            margin:0;
+            display:flex;
+            justify-content:center;
+            gap:80px;
+            font-weight:700;
+        }
+
+        .menu-main li{
+            position:relative;
+        }
+
+        .menu-main a{
+            color:#222;
+            text-decoration:none;
+            font-family:'Montserrat', sans-serif;
+            transition:color 0.15s ease;
+        }
+
+        /* Hover: grün, kein Schatten */
+        .menu-main a:hover{
+            color:#0ea574;
+        }
+
+        /* -------- DROPDOWN -------- */
+        .submenu{
+            position:absolute;
+            top:100%;
+            left:50%;
+            transform:translate(-50%, 8px);
+            list-style:none;
+            padding:20px 35px;
+            margin:0;
+
+            background:#ffffff;
+            border-radius:14px;
+            box-shadow:0 10px 30px rgba(0,0,0,0.12);
+            min-width:260px;
+
+            opacity:0;
+            visibility:hidden;
+            pointer-events:none;
+
+            transition:opacity 0.18s ease, transform 0.18s ease;
+        }
+
+        .submenu li{
+            margin:10px 0;
+        }
+
+        .submenu a{
+            color:#333;
+            font-weight:600;
+            text-decoration:none;
+        }
+
+        .submenu a:hover{
+            color:#0ea574;
+        }
+
+        .has-sub:hover .submenu{
+            opacity:1;
+            visibility:visible;
+            pointer-events:auto;
+            transform:translate(-50%, 0);
+        }
+
+        /* -------- HERO -------- */
+        .hero{
+            max-width:1200px;
+            margin:20px auto 40px;
+            background:#ffffff;
+            padding:40px 60px;
+
+            border-top:4px solid #0ea574;
+            border-bottom:4px solid #0ea574;
+        }
+
+        .hero h1{
+            margin:0 0 20px;
+            font-family:'Montserrat', sans-serif;
+            font-size:2.8rem;
+            font-weight:800;
+            color:#0c6b3f;
+        }
+
+        .hero p{
+            font-size:2.0rem;
+            line-height:1.8;
+            margin:0;
+        }
+
+        /* -------- CONTENT -------- */
+        .content{
+            max-width:1200px;
+            margin:0 auto 60px;
+            background:#ffffff;
+            padding:40px 60px 60px;
+            text-align:center;
+        }
+
+        /* -------- QUOTE -------- */
+        .quote{
+            font-style:italic;
+            border-left:4px solid #0ea574;
+            padding:18px 24px;
+            margin:0 auto 40px;
+            background:#f9f9f9;
+            color:#222;
+            max-width:800px;
+        }
+
+        .quote footer{
+            margin-top:10px;
+            font-weight:700;
+            font-style:normal;
+            color:#555;
+        }
+
+        /* -------- VIDEO -------- */
+        .video-wrapper{
+            margin-top:30px;
+            display:flex;
+            justify-content:center;
+        }
+
+        iframe{
+            max-width:100%;
+            border:none;
+            border-radius:8px;
+            box-shadow:0 8px 24px rgba(0,0,0,0.2);
+        }
+
+        /* -------- FOOTER -------- */
+        .footer{
+            background:#222;
+            color:#ffffff;
+            padding:20px 0;
+            margin-top:40px;
+        }
+
+        .footer-content{
+            max-width:1200px;
+            margin:0 auto;
+            text-align:center;
+        }
+
+        .footer-content a{
+            color:#a5ffd4;
+            margin:0 10px;
+        }
+
+        .footer-content h4{
+            font-size:0.8rem;
+            margin-top:10px;
+        }
+    </style>
+</head>
+
+<body>
+
+<!-- MENU -->
+<header>
+    <nav class="menu">
+        <ul class="menu-main">
+            <li><a href="index.html">Accueil</a></li>
+
+            <li class="has-sub">
+                <a href="sport.html">Faire du sport en plein air</a>
+                <ul class="submenu">
+                    <li><a href="tennis.html">Tennis</a></li>
+                    <li><a href="running.html">Running</a></li>
+                    <li><a href="basket.html">Basket</a></li>
+                </ul>
+            </li>
+
+            <li class="has-sub">
+                <a href="equipements.html">S'équiper</a>
+                <ul class="submenu">
+                    <li><a href="selection-ete.html">Notre sélection été</a></li>
+                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
+                    <li><a href="astuces.html">Astuces</a></li>
+                </ul>
+            </li>
+
+            <li><a href="sources.html">Sources</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- HERO -->
+<section class="hero">
+    <h1>Basket : marquez votre plus beau panier</h1>
+    <p>
+        Vous voulez améliorer vos tirs au basket ?
+        Découvrez les meilleures astuces pour perfectionner votre geste
+        et réussir vos plus beaux paniers.
+    </p>
+</section>
+
+<!-- CONTENU -->
+<section class="content">
+
+    <!-- QUOTE -->
+    <blockquote class="quote">
+        <p>« J’ai échoué encore et encore dans ma vie. Et c’est pour cela que je réussis. »</p>
+        <footer>— Michael Jordan</footer>
+    </blockquote>
+
+    <!-- VIDEO -->
+    <div class="video-wrapper">
+        <iframe width="800" height="450"
+                src="https://www.youtube.com/embed/Ian4YZzLIMM"
+                allowfullscreen>
+        </iframe>
+    </div>
+
+</section>
+
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer-content">
+        <a href="mailto:laurence.cusin-masset@etu.uni-paris1.fr?subject=Question%20sur%20le%20site%20internet">
+            Nous contacter par mail
+        </a>
+
+        <a href="mentions-legales.html">Mentions légales</a>
+
+        <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
+    </div>
+</footer>
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+</body>
+</html>
