--- a/basket.html
+++ b/basket.html
@@ -56,14 +56,18 @@
             color:#222;
             text-decoration:none;
             font-family:'Montserrat', sans-serif;
-            transition:color 0.15s ease;
+            transition:color 0.15s ease, text-shadow 0.15s ease;
         }
 
-        /* Hover: grün, kein Schatten */
-        .menu-main a:hover{
+        .menu-main a:hover,
+        .menu-main a:focus{
             color:#0ea574;
+            text-shadow:none;
         }
 
+        .burger{
+            display:none;
+        }
         /* -------- DROPDOWN -------- */
         .submenu{
             position:absolute;
