--- a/running.html
+++ b/running.html
@@ -9,13 +9,10 @@
     <meta name="keywords" content="course à pied, running, marathon, chaussures de sport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap wie auf der Startseite (falls du es dort nutzt) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-    <!-- eigene CSS-Datei, falls du sie weiterhin brauchst -->
     <link rel="stylesheet" href="feuille-de-style.css">
 
-    <!-- Google Fonts wie auf der anderen Seite -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
@@ -28,7 +25,6 @@
             background:#f3f5f7;
         }
 
-        /* -------- NAV -------- */
         /* -------- NAV -------- */
         header{
             background:#ffffff;
@@ -119,7 +115,7 @@
             transform:translate(-50%, 0);
         }
 
-        /* -------- HERO (Running-Seite) -------- */
+        /* -------- HERO -------- */
         .hero{
             max-width:1200px;
             margin:20px auto 40px;
@@ -145,7 +141,6 @@
             margin:0;
         }
 
-        /* Falls du später noch Inhalt hinzufügst */
         main{
             max-width:1200px;
             margin:0 auto 60px;
@@ -222,7 +217,6 @@
            Découvrez des parcours variés, que vous soyez débutant, joggeur régulier ou marathonien en préparation.</p>
     </section>
 
-    <!-- (Optional) zusätzlicher Inhalt -->
     <!--
     <main>
         <h2>Vos premiers kilomètres à Paris</h2>
@@ -243,7 +237,6 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS (falls du Komponenten nutzt, optional aber passend zur Startseite) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
