--- a/tennis.html
+++ b/tennis.html
@@ -141,7 +141,6 @@
             line-height:1.8;
         }
 
-        /* -------- TITEL FÜR H2 -------- */
         .welcome-section h2,
         main h2{
             margin-top:0;
@@ -152,7 +151,7 @@
             font-family:'Montserrat', sans-serif;
         }
 
-        /* -------- CONTENT-BLOCK 1 (wie Bienvenue) -------- */
+        /* -------- CONTENT-BLOCK 1 -------- */
         .welcome-section{
             max-width:1200px;
             margin:0 auto 40px;
