--- a/sources.html
+++ b/sources.html
@@ -1,1 +1,183 @@
+<!DOCTYPE html>
+<html lang="fr-FR">
+<head>
+    <meta charset="utf-8">
+    <title>Page simple</title>
 
+    <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
+
+    <style>
+        body{
+            margin:0;
+            font-family: Arial, Helvetica, sans-serif;
+            background:#f3f5f7;
+        }
+
+        /* -------- NAV -------- */
+        header{
+            background:#ffffff;
+            box-shadow:0 2px 4px rgba(0,0,0,0.05);
+            position:sticky;
+            top:0;
+            z-index:1000;
+        }
+
+        .menu{
+            max-width:1200px;
+            margin:0 auto;
+        }
+
+        .menu-main{
+            list-style:none;
+            padding:15px 0;
+            margin:0;
+            display:flex;
+            justify-content:center;
+            gap:80px;
+            font-weight:700;
+        }
+
+        .menu-main li{
+            position:relative;
+        }
+
+        .menu-main a{
+            color:#222;
+            text-decoration:none;
+            font-family:'Montserrat', sans-serif;
+            transition:color 0.15s ease;
+        }
+
+        .menu-main a:hover{
+            color:#0ea574;
+        }
+
+        /* -------- DROPDOWN -------- */
+        .submenu{
+            position:absolute;
+            top:100%;
+            left:50%;
+            transform:translate(-50%, -8px);
+            list-style:none;
+            padding:20px 35px;
+            margin:0;
+            background:#ffffff;
+            border-radius:14px;
+            box-shadow:0 10px 30px rgba(0,0,0,0.12);
+            min-width:260px;
+            opacity:0;
+            visibility:hidden;
+            pointer-events:none;
+        }
+
+        .has-sub:hover .submenu{
+            opacity:1;
+            visibility:visible;
+            pointer-events:auto;
+            transform:translate(-50%, 0);
+        }
+
+        /* -------- MAIN (LOREM IPSUM) -------- */
+        main{
+            max-width:1200px;
+            margin:60px auto;
+            background:#ffffff;
+            padding:50px 60px;
+        }
+
+        main p{
+            font-size:2rem;
+            line-height:1.8;
+        }
+
+        /* -------- FOOTER -------- */
+        .footer{
+            background:#222;
+            color:#ffffff;
+            padding:20px 0;
+            margin-top:40px;
+        }
+
+        .footer-content{
+            max-width:1200px;
+            margin:0 auto;
+            text-align:center;
+        }
+
+        .footer-content a{
+            color:#a5ffd4;
+            margin:0 10px;
+        }
+
+        .footer-content h4{
+            font-size:0.8rem;
+            margin-top:10px;
+        }
+    </style>
+</head>
+
+<body>
+
+<!-- NAVBAR -->
+<header>
+    <nav class="menu">
+        <ul class="menu-main">
+            <li><a href="index.html">Accueil</a></li>
+
+            <li class="has-sub">
+                <a href="sport.html">Faire du sport en plein air</a>
+                <ul class="submenu">
+                    <li><a href="tennis.html">Tennis</a></li>
+                    <li><a href="running.html">Running</a></li>
+                    <li><a href="basket.html">Basket</a></li>
+                </ul>
+            </li>
+
+            <li class="has-sub">
+                <a href="equipements.html">S'équiper</a>
+                <ul class="submenu">
+                    <li><a href="selection-ete.html">Notre sélection été</a></li>
+                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
+                    <li><a href="astuces.html">Astuces</a></li>
+                </ul>
+            </li>
+
+            <li><a href="sources.html">Sources</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- CONTENU CENTRAL -->
+<main>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
+        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
+        Maecenas ligula massa, varius a, semper congue, euismod non, mi.  
+        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
+        Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
+        Pellentesque congue. Ut in risus volutpat libero pharetra tempor.
+        Cras vestibulum bibendum augue. Praesent egestas leo in pede.
+    </p>
+</main>
+
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer-content">
+        <a href="mailto:laurence.cusin-masset@etu.uni-paris1.fr">
+            Nous contacter par mail
+        </a>
+
+        <a href="mentions-legales.html">Mentions légales</a>
+
+        <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
+    </div>
+</footer>
+
+</body>
+</html>
