--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="keywords" content="ADJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Icon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
