--- a/sport.html
+++ b/sport.html
@@ -11,7 +11,7 @@
 
     <!-- Icon (optional, wie bei index.html) -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap (falls du es global nutzen willst) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
