--- a/basket.html
+++ b/basket.html
@@ -9,197 +9,23 @@
     <meta name="keywords" content="basket, ballon de basket, panier, terrain, tirer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Icon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
+    <!-- CSS  -->
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/basket.css">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
-
-    <style>
-        body{
-            margin:0;
-            font-family: Arial, Helvetica, sans-serif;
-            background:#f3f5f7;
-        }
-
-        /* -------- NAV -------- */
-        header{
-            background:#ffffff;
-            box-shadow:0 2px 4px rgba(0,0,0,0.05);
-            position:sticky;
-            top:0;
-            z-index:1000;
-        }
-
-        .menu{
-            max-width:1200px;
-            margin:0 auto;
-        }
-
-        .menu-main{
-            list-style:none;
-            padding:15px 0;
-            margin:0;
-            display:flex;
-            justify-content:center;
-            gap:80px;
-            font-weight:700;
-        }
-
-        .menu-main li{
-            position:relative;
-        }
-
-        .menu-main a{
-            color:#222;
-            text-decoration:none;
-            font-family:'Montserrat', sans-serif;
-            transition:color 0.15s ease, text-shadow 0.15s ease;
-        }
-
-        .menu-main a:hover,
-        .menu-main a:focus{
-            color:#0ea574;
-            text-shadow:none;
-        }
-
-        .burger{
-            display:none;
-        }
-        
-        /* -------- DROPDOWN -------- */
-        .submenu{
-            position:absolute;
-            top:100%;
-            left:50%;
-            transform:translate(-50%, 8px);
-            list-style:none;
-            padding:20px 35px;
-            margin:0;
-
-            background:#ffffff;
-            border-radius:14px;
-            box-shadow:0 10px 30px rgba(0,0,0,0.12);
-            min-width:260px;
-
-            opacity:0;
-            visibility:hidden;
-            pointer-events:none;
-
-            transition:opacity 0.18s ease, transform 0.18s ease;
-        }
-
-        .submenu li{
-            margin:10px 0;
-        }
-
-        .submenu a{
-            color:#333;
-            font-weight:600;
-            text-decoration:none;
-        }
-
-        .submenu a:hover{
-            color:#0ea574;
-        }
-
-        .has-sub:hover .submenu{
-            opacity:1;
-            visibility:visible;
-            pointer-events:auto;
-            transform:translate(-50%, 0);
-        }
-
-        /* -------- HERO -------- */
-        .hero{
-            max-width:1200px;
-            margin:20px auto 40px;
-            background:#ffffff;
-            padding:40px 60px;
-
-            border-top:4px solid #0ea574;
-            border-bottom:4px solid #0ea574;
-        }
-
-        .hero h1{
-            margin:0 0 20px;
-            font-family:'Montserrat', sans-serif;
-            font-size:2.8rem;
-            font-weight:800;
-            color:#0c6b3f;
-        }
-
-        .hero p{
-            font-size:2.0rem;
-            line-height:1.8;
-            margin:0;
-        }
-
-        /* -------- CONTENT -------- */
-        .content{
-            max-width:1200px;
-            margin:0 auto 60px;
-            background:#ffffff;
-            padding:40px 60px 60px;
-            text-align:center;
-        }
-
-        /* -------- QUOTE -------- */
-        .quote{
-            font-style:italic;
-            border-left:4px solid #0ea574;
-            padding:18px 24px;
-            margin:0 auto 40px;
-            background:#f9f9f9;
-            color:#222;
-            max-width:800px;
-        }
-
-        .quote footer{
-            margin-top:10px;
-            font-weight:700;
-            font-style:normal;
-            color:#555;
-        }
-
-        /* -------- VIDEO -------- */
-        .video-wrapper{
-            margin-top:30px;
-            display:flex;
-            justify-content:center;
-        }
-
-        iframe{
-            max-width:100%;
-            border:none;
-            border-radius:8px;
-            box-shadow:0 8px 24px rgba(0,0,0,0.2);
-        }
-
-        /* -------- FOOTER -------- */
-        .footer{
-            background:#222;
-            color:#ffffff;
-            padding:20px 0;
-            margin-top:40px;
-        }
-
-        .footer-content{
-            max-width:1200px;
-            margin:0 auto;
-            text-align:center;
-        }
-
-        .footer-content a{
-            color:#a5ffd4;
-            margin:0 10px;
-        }
-
-        .footer-content h4{
-            font-size:0.8rem;
-            margin-top:10px;
-        }
-    </style>
 </head>
 
 <body>
