--- a/basket.html
+++ b/basket.html
@@ -75,7 +75,7 @@
     <!-- QUOTE -->
     <blockquote class="quote">
         <p>« J’ai échoué encore et encore dans ma vie. Et c’est pour cela que je réussis. »</p>
-        <footer>— Michael Jordan</footer>
+        <footer>Michael Jordan</footer>
     </blockquote>
 
     <!-- VIDEO -->
