--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/home.css">
+    <!-- CSS: gleiche Reihenfolge wie bei basket.html -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/home.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,8 +31,34 @@
 
 <body>
 
-    <!-- Navbar wird per fetch geladen -->
-    <div id="navbar"></div>
+    <!-- MENU – exakt wie in basket.html aufgebaut -->
+    <header>
+        <nav class="menu">
+            <ul class="menu-main">
+                <li><a href="index.html">Accueil</a></li>
+
+                <li class="has-sub">
+                    <a href="sport.html">Faire du sport en plein air</a>
+                    <ul class="submenu">
+                        <li><a href="tennis.html">Tennis</a></li>
+                        <li><a href="running.html">Running</a></li>
+                        <li><a href="basket.html">Basket</a></li>
+                    </ul>
+                </li>
+
+                <li class="has-sub">
+                    <a href="equipements.html">S'équiper</a>
+                    <ul class="submenu">
+                        <li><a href="selection-ete.html">Notre sélection été</a></li>
+                        <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
+                        <li><a href="astuces.html">Astuces</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="sources.html">Sources</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- HERO -->
     <section class="hero">
@@ -103,33 +129,22 @@
         <img src="image/TennisMenu.jpg" alt="Tennis">
     </main>
 
-    <!-- Footer wird per fetch geladen -->
-    <div id="footer"></div>
+    <!-- FOOTER – ebenfalls wie bei basket.html -->
+    <footer class="footer">
+        <div class="footer-content">
+            <a href="mailto:laurence.cusin-masset@etu.uni-paris1.fr?subject=Question%20sur%20le%20site%20internet">
+                Nous contacter par mail
+            </a>
+
+            <a href="mentions-legales.html">Mentions légales</a>
+
+            <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
+        </div>
+    </footer>
 
     <!-- SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-
-            // Navbar laden
-            fetch("navbar.html")
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById("navbar").innerHTML = html;
-                })
-                .catch(err => console.error("Fehler beim Laden der Navbar:", err));
-
-            // Footer laden
-            fetch("footer.html")
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById("footer").innerHTML = html;
-                })
-                .catch(err => console.error("Fehler beim Laden des Footers:", err));
-        });
-    </script>
 
 </body>
 </html>
