--- a/sources.html
+++ b/sources.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <title>Sources</title>
@@ -9,8 +9,12 @@
 
     <!-- Icon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
-    <!-- CSS -->
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- CSS (gleiche Reihenfolge wie basket.html) -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -24,37 +28,66 @@
 
 <body>
 
-    <!-- Navbar -->
-    <div id="navbar"></div>
+<!-- ✅ NAVBAR – direkt im HTML -->
+<header>
+    <nav class="menu">
+        <ul class="menu-main">
+            <li><a href="index.html">Accueil</a></li>
 
-    <!-- CONTENU CENTRAL -->
-    <main>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-            dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
-            Maecenas ligula massa, varius a, semper congue, euismod non, mi.  
-            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-            Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
-            Pellentesque congue. Ut in risus volutpat libero pharetra tempor.
-            Cras vestibulum bibendum augue. Praesent egestas leo in pede.
-        </p>
-    </main>
+            <li class="has-sub">
+                <a href="sport.html">Faire du sport en plein air</a>
+                <ul class="submenu">
+                    <li><a href="tennis.html">Tennis</a></li>
+                    <li><a href="running.html">Running</a></li>
+                    <li><a href="basket.html">Basket</a></li>
+                </ul>
+            </li>
 
-    <!-- Footer -->
-    <div id="footer"></div>
+            <li class="has-sub">
+                <a href="equipements.html">S'équiper</a>
+                <ul class="submenu">
+                    <li><a href="selection-ete.html">Notre sélection été</a></li>
+                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
+                    <li><a href="astuces.html">Astuces</a></li>
+                </ul>
+            </li>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
+            <li><a href="sources.html">Sources</a></li>
+        </ul>
+    </nav>
+</header>
 
-            fetch("navbar.html")
-                .then(res => res.text())
-                .then(html => document.getElementById("navbar").innerHTML = html);
+<!-- ✅ CONTENU -->
+<main class="sources-content">
+    <h1>Sources</h1>
 
-            fetch("footer.html")
-                .then(res => res.text())
-                .then(html => document.getElementById("footer").innerHTML = html);
-        });
-    </script>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+        Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
+        Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.
+    </p>
+
+    <p>
+        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi,
+        non fermentum diam nisl sit amet erat. Duis semper.
+    </p>
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="footer">
+    <div class="footer-content">
+        <a href="mailto:laurence.cusin-masset@etu.uni-paris1.fr">
+            Nous contacter par mail
+        </a>
+
+        <a href="mentions-legales.html">Mentions légales</a>
+
+        <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
+    </div>
+</footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
