--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-    <!-- CSS: gleiche Reihenfolge wie bei basket.html -->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -31,7 +31,7 @@
 
 <body>
 
-    <!-- MENU – exakt wie in basket.html aufgebaut -->
+    <!-- MENU -->
     <header>
         <nav class="menu">
             <ul class="menu-main">
@@ -129,7 +129,7 @@
         <img src="image/TennisMenu.jpg" alt="Tennis">
     </main>
 
-    <!-- FOOTER – ebenfalls wie bei basket.html -->
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-content">
             <a href="mailto:laurence.cusin-masset@etu.uni-paris1.fr?subject=Question%20sur%20le%20site%20internet">
