--- a/equipements.html
+++ b/equipements.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/equipments.css">
+    <link rel="stylesheet" href="css/equipements.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
