--- a/equipements.html
+++ b/equipements.html
@@ -63,8 +63,9 @@
 <section class="hero">
     <h1>S'équiper</h1>
     <p>
-        De la Tour Eiffel aux quais de Seine, courir en plein air à Paris offre un cadre idyllique pour tous les niveaux.
-        Découvrez des parcours variés, que vous soyez débutant, joggeur régulier ou marathonien en préparation.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
+        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
+        massa, varius a, semper congue, euismod non, mi.
     </p>
 </section>
 
