--- a/equipements.html
+++ b/equipements.html
@@ -69,6 +69,17 @@
     </p>
 </section>
 
+
+<section class="equipements">
+    <h2>Equipements</h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
+        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
+        massa, varius a, semper congue, euismod non, mi.
+    </p>
+</section>
+    
+
 <!-- FOOTER -->
 <footer class="footer">
     <div class="footer-content">
