--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
             Nous contacter par mail
         </a>
 
-        <a href="mentions-legales.html">Mentions légales</a>
+        <a href="mentions-legales.pdf" target="_blank">Mentions légales</a>
 
         <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
     </div>
